• provide osascript with a copy of the actual script, to prevent it from being modified (and thus give merge conflicts when svn updating)
So everyone who have tried the new pasting service should likely do a svn revert on the pastebin.scrpt to get it back to an unaltered state


git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@3618 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Commands/Paste Selection in #textmate.plist
+++ b/Commands/Paste Selection in #textmate.plist
@@ -5,8 +5,11 @@
 	<key>beforeRunningCommand</key>
 	<string>nop</string>
 	<key>command</key>
-	<string>osascript "$TM_BUNDLE_SUPPORT/pastebin.scpt"
-</string>
+	<string># since osascript wants to “update” the script we run it with a copy
+SCRIPT=$(mktemp -t tm_pastebin)
+cp "$TM_BUNDLE_SUPPORT/pastebin.scpt" "$SCRIPT"
+osascript "$SCRIPT"
+rm -f "$SCRIPT"</string>
 	<key>fallbackInput</key>
 	<string>line</string>
 	<key>input</key>
