--- a/Commands/Create HTML from Document : Selection.plist
+++ b/Commands/Create HTML from Document : Selection.plist
@@ -7,13 +7,11 @@
 	<key>command</key>
 	<string>#!/usr/bin/env ruby -rjcode -Ku
 require "#{ENV['TM_BUNDLE_SUPPORT']}/lib/doctohtml.rb"
-print document_to_html( STDIN.read )</string>
+print document_to_html( STDIN.read, :include_css =&gt; !ENV.has_key?('TM_SELECTED_TEXT') )</string>
 	<key>input</key>
 	<string>selection</string>
 	<key>inputFormat</key>
 	<string>xml</string>
-	<key>keyEquivalent</key>
-	<string></string>
 	<key>name</key>
 	<string>Create HTML From Document / Selection</string>
 	<key>output</key>
