• move out the release notes rules from the Plain Text syntax and into its own language definition -- this also marks up mentions of tickets and allows enter (⌅) to be used to visit the page for the ticket (only when the caret is at the ticket ID)
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@3667 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -7,6 +7,7 @@
 		<key>excludedItems</key>
 		<array>
 			<string>16B36407-9F9D-47E0-93B8-80BA881066B5</string>
+			<string>F10674C0-D55D-4EFD-88DE-DC60C3EE6562</string>
 		</array>
 		<key>items</key>
 		<array>
@@ -59,6 +60,7 @@
 		<string>61F92184-1A50-4310-9F75-C9CD2C8819FA</string>
 		<string>16B36407-9F9D-47E0-93B8-80BA881066B5</string>
 		<string>101D6FC2-6CBD-11D9-B329-000D93347A42</string>
+		<string>8926CAFE-1CF3-4CF9-A056-4FF90F596E9A</string>
 		<string>8C0D0F05-6E49-11D9-A933-000D93589AF6</string>
 		<string>DA3A550A-F4AF-4CFD-935F-8687FA17DC4B</string>
 	</array>
