• markup CamelCase words in the release notes and disable spell checking for such
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@3678 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -63,6 +63,8 @@
 		<string>8926CAFE-1CF3-4CF9-A056-4FF90F596E9A</string>
 		<string>8C0D0F05-6E49-11D9-A933-000D93589AF6</string>
 		<string>DA3A550A-F4AF-4CFD-935F-8687FA17DC4B</string>
+		<string>EAACA103-A5C9-4D33-BB23-BA908CB83F22</string>
+		<string>F10674C0-D55D-4EFD-88DE-DC60C3EE6562</string>
 	</array>
 	<key>uuid</key>
 	<string>5A9D4FC6-6CBE-11D9-A21B-000D93589AF6</string>
