Use full path for mktemp to avoid conflicts with alternate installations
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@3738 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Commands/Paste Selection in #textmate.plist
+++ b/Commands/Paste Selection in #textmate.plist
@@ -6,7 +6,7 @@
 	<string>nop</string>
 	<key>command</key>
 	<string># since osascript wants to “update” the script we run it with a copy
-SCRIPT=$(mktemp -t tm_pastebin)
+SCRIPT=$(/usr/bin/mktemp -t tm_pastebin)
 cp "$TM_BUNDLE_SUPPORT/pastebin.scpt" "$SCRIPT"
 osascript "$SCRIPT"
 rm -f "$SCRIPT"</string>
