Assign key equivalent to language.
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@3788 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/LanguageDefinition.plist
+++ b/Syntaxes/LanguageDefinition.plist
@@ -6,6 +6,8 @@
 	<string>(/\*|\{|\()</string>
 	<key>foldingStopMarker</key>
 	<string>(\*/|\}|\))</string>
+	<key>keyEquivalent</key>
+	<string>^~L</string>
 	<key>name</key>
 	<string>Language Definition</string>
 	<key>patterns</key>
