--- a/Syntaxes/LanguageDefinition.plist
+++ b/Syntaxes/LanguageDefinition.plist
@@ -9,7 +9,7 @@
 	<key>keyEquivalent</key>
 	<string>^~L</string>
 	<key>name</key>
-	<string>Language Definition</string>
+	<string>Language Grammar</string>
 	<key>patterns</key>
 	<array>
 		<dict>
