• better folding patterns
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@3873 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/LanguageDefinition.plist
+++ b/Syntaxes/LanguageDefinition.plist
@@ -5,9 +5,9 @@
 	<key>firstLineMatch</key>
 	<string>^\{(\s*[a-zA-Z])?$</string>
 	<key>foldingStartMarker</key>
-	<string>(\{|\()</string>
+	<string>^\s*([a-z_-]+ = )?[{(](?!.*[)}][;,]?\s*$)</string>
 	<key>foldingStopMarker</key>
-	<string>(\}|\))</string>
+	<string>^\s*(\}|\))</string>
 	<key>keyEquivalent</key>
 	<string>^~L</string>
 	<key>name</key>
