• snippets useful when working with language grammars — tab triggers follow the Ruby scheme: 3 first letters of the construct to insert
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@3893 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -18,8 +18,10 @@
 			<string>ED204720-38FC-427C-B91E-D6AE866DAE3A</string>
 			<string>------------------------------------</string>
 			<string>970BA294-B667-11D9-8D53-00039369B986</string>
-			<string>48976460-B5A4-11D9-87C9-000D93589AF6</string>
 			<string>DA0A4E77-5F16-11D9-B9C3-000D93589AF6</string>
+			<string>------------------------------------</string>
+			<string>48976460-B5A4-11D9-87C9-000D93589AF6</string>
+			<string>FC48968D-E3DE-4FEC-B82C-CB2D0CC3BCC1</string>
 			<string>------------------------------------</string>
 			<string>20B6054F-965B-4C9B-91DA-E6868A721954</string>
 			<string>5C4108F1-7979-413C-A6DF-3271708C7B60</string>
@@ -39,6 +41,24 @@
 				</array>
 				<key>name</key>
 				<string>Scratch Snippet</string>
+			</dict>
+			<key>FC48968D-E3DE-4FEC-B82C-CB2D0CC3BCC1</key>
+			<dict>
+				<key>items</key>
+				<array>
+					<string>0D8A14ED-0701-4AD8-8A9C-15AD1BA60D8D</string>
+					<string>------------------------------------</string>
+					<string>CC1B8D51-A3E8-4940-B4E8-E0B87D0E4BBA</string>
+					<string>7AA7E17E-80A3-4F64-80B8-37D335B3BAE4</string>
+					<string>D9B7683F-308C-4A42-92FB-6DFC06240A92</string>
+					<string>------------------------------------</string>
+					<string>8C3D6E62-E865-4655-9B20-E3B95F07F9B6</string>
+					<string>4AB06A04-02CF-4E7B-9E7E-07747A68160C</string>
+					<string>------------------------------------</string>
+					<string>A9191F2E-8FAC-41B9-B729-9663E42452DD</string>
+				</array>
+				<key>name</key>
+				<string>Language Grammar Snippets</string>
 			</dict>
 		</dict>
 	</dict>
@@ -69,6 +89,13 @@
 		<string>985E70CD-0539-4E00-B0B9-F38D9789B8F3</string>
 		<string>46D63D96-FBDA-4E36-B088-018D6B672FFB</string>
 		<string>6F3A4873-C006-471C-BC7E-7EF289C685B4</string>
+		<string>CC1B8D51-A3E8-4940-B4E8-E0B87D0E4BBA</string>
+		<string>0D8A14ED-0701-4AD8-8A9C-15AD1BA60D8D</string>
+		<string>7AA7E17E-80A3-4F64-80B8-37D335B3BAE4</string>
+		<string>D9B7683F-308C-4A42-92FB-6DFC06240A92</string>
+		<string>8C3D6E62-E865-4655-9B20-E3B95F07F9B6</string>
+		<string>4AB06A04-02CF-4E7B-9E7E-07747A68160C</string>
+		<string>A9191F2E-8FAC-41B9-B729-9663E42452DD</string>
 	</array>
 	<key>uuid</key>
 	<string>5A9D4FC6-6CBE-11D9-A21B-000D93589AF6</string>
