• restrict first line match to look for scopeName
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@3959 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/LanguageDefinition.plist
+++ b/Syntaxes/LanguageDefinition.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>firstLineMatch</key>
-	<string>^\{(\s*[a-zA-Z])?$</string>
+	<string>^\{\s*scopeName = .*$</string>
 	<key>foldingStartMarker</key>
 	<string>^\s*([a-z_-]+ = )?[{(](?!.*[)}][;,]?\s*$)</string>
 	<key>foldingStopMarker</key>
