--- a/info.plist
+++ b/info.plist
@@ -82,6 +82,7 @@
 		<string>F10674C0-D55D-4EFD-88DE-DC60C3EE6562</string>
 		<string>D609BF3F-BEDB-41AE-BA6F-903CC77A7BB3</string>
 		<string>101D6FC2-6CBD-11D9-B329-000D93347A42</string>
+		<string>0473E42E-A64E-4D3E-B20B-BA66E0145BC4</string>
 		<string>8926CAFE-1CF3-4CF9-A056-4FF90F596E9A</string>
 		<string>EAACA103-A5C9-4D33-BB23-BA908CB83F22</string>
 		<string>8C0D0F05-6E49-11D9-A933-000D93589AF6</string>
