Added include snippet.
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@3985 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -47,6 +47,7 @@
 				<key>items</key>
 				<array>
 					<string>0D8A14ED-0701-4AD8-8A9C-15AD1BA60D8D</string>
+					<string>D5BA7FE7-543F-47FC-BECD-750200B81762</string>
 					<string>------------------------------------</string>
 					<string>CC1B8D51-A3E8-4940-B4E8-E0B87D0E4BBA</string>
 					<string>7AA7E17E-80A3-4F64-80B8-37D335B3BAE4</string>
@@ -96,6 +97,7 @@
 		<string>D9B7683F-308C-4A42-92FB-6DFC06240A92</string>
 		<string>8C3D6E62-E865-4655-9B20-E3B95F07F9B6</string>
 		<string>4AB06A04-02CF-4E7B-9E7E-07747A68160C</string>
+		<string>D5BA7FE7-543F-47FC-BECD-750200B81762</string>
 		<string>A9191F2E-8FAC-41B9-B729-9663E42452DD</string>
 	</array>
 	<key>uuid</key>
