• command to create a default custom URL association file for the Edit in TextMate input manager
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@3993 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -12,6 +12,7 @@
 		<key>items</key>
 		<array>
 			<string>61F92184-1A50-4310-9F75-C9CD2C8819FA</string>
+			<string>4981F52A-F663-45FC-AE25-EE211E88BA05</string>
 			<string>------------------------------------</string>
 			<string>950B3108-E2E3-414E-9C4C-EE068F59A895</string>
 			<string>7AE6F783-F162-4063-850D-1441441849D8</string>
@@ -79,6 +80,7 @@
 		<string>5F225755-5840-44CF-BC26-2D484DE833A0</string>
 		<string>ADFED53B-16EC-4956-A6A7-3EA2B8140F86</string>
 		<string>61F92184-1A50-4310-9F75-C9CD2C8819FA</string>
+		<string>4981F52A-F663-45FC-AE25-EE211E88BA05</string>
 		<string>16B36407-9F9D-47E0-93B8-80BA881066B5</string>
 		<string>F10674C0-D55D-4EFD-88DE-DC60C3EE6562</string>
 		<string>D609BF3F-BEDB-41AE-BA6F-903CC77A7BB3</string>
