--- a/Syntaxes/LanguageDefinition.plist
+++ b/Syntaxes/LanguageDefinition.plist
@@ -1006,6 +1006,8 @@
 									<string>keyword.operator.dictionary.tm-language-def</string>
 								</dict>
 							</dict>
+							<key>contentName</key>
+							<string>meta.captures.tm-language-def</string>
 							<key>end</key>
 							<string>(\})</string>
 							<key>patterns</key>
