Move meta.captures.tm-language-def to scope the entire rule rather than just the contents to be more consistant with the repository scope.
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@4023 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/LanguageDefinition.plist
+++ b/Syntaxes/LanguageDefinition.plist
@@ -993,6 +993,8 @@
 							<string>keyword.operator.dictionary.tm-language-def</string>
 						</dict>
 					</dict>
+					<key>name</key>
+					<string>meta.captures.tm-language-def</string>
 					<key>patterns</key>
 					<array>
 						<dict>
@@ -1006,8 +1008,6 @@
 									<string>keyword.operator.dictionary.tm-language-def</string>
 								</dict>
 							</dict>
-							<key>contentName</key>
-							<string>meta.captures.tm-language-def</string>
 							<key>end</key>
 							<string>(\})</string>
 							<key>patterns</key>
