New command to overload return when inside a captures block of a language grammar. Will insert a new rule on the line following the caret position with a best guess of a default number.
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@4048 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -8,6 +8,7 @@
 		<array>
 			<string>16B36407-9F9D-47E0-93B8-80BA881066B5</string>
 			<string>F10674C0-D55D-4EFD-88DE-DC60C3EE6562</string>
+			<string>02F6DE2C-3334-4DCE-9FBB-6F8906653E5C</string>
 		</array>
 		<key>items</key>
 		<array>
@@ -98,6 +99,7 @@
 		<string>7AA7E17E-80A3-4F64-80B8-37D335B3BAE4</string>
 		<string>D9B7683F-308C-4A42-92FB-6DFC06240A92</string>
 		<string>8C3D6E62-E865-4655-9B20-E3B95F07F9B6</string>
+		<string>02F6DE2C-3334-4DCE-9FBB-6F8906653E5C</string>
 		<string>4AB06A04-02CF-4E7B-9E7E-07747A68160C</string>
 		<string>D5BA7FE7-543F-47FC-BECD-750200B81762</string>
 		<string>A9191F2E-8FAC-41B9-B729-9663E42452DD</string>
