--- a/info.plist
+++ b/info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>deleted</key>
+	<array>
+		<string>8C0D0F05-6E49-11D9-A933-000D93589AF6</string>
+	</array>
 	<key>mainMenu</key>
 	<dict>
 		<key>excludedItems</key>
@@ -89,7 +93,6 @@
 		<string>0473E42E-A64E-4D3E-B20B-BA66E0145BC4</string>
 		<string>8926CAFE-1CF3-4CF9-A056-4FF90F596E9A</string>
 		<string>EAACA103-A5C9-4D33-BB23-BA908CB83F22</string>
-		<string>8C0D0F05-6E49-11D9-A933-000D93589AF6</string>
 		<string>DA3A550A-F4AF-4CFD-935F-8687FA17DC4B</string>
 		<string>985E70CD-0539-4E00-B0B9-F38D9789B8F3</string>
 		<string>46D63D96-FBDA-4E36-B088-018D6B672FFB</string>
@@ -103,6 +106,8 @@
 		<string>4AB06A04-02CF-4E7B-9E7E-07747A68160C</string>
 		<string>D5BA7FE7-543F-47FC-BECD-750200B81762</string>
 		<string>A9191F2E-8FAC-41B9-B729-9663E42452DD</string>
+		<string>8A6A5847-998C-4403-9268-072ED4262EC6</string>
+		<string>65EDFD8E-0A95-4AB8-AF07-53AD63B00E06</string>
 	</array>
 	<key>uuid</key>
 	<string>5A9D4FC6-6CBE-11D9-A21B-000D93589AF6</string>
