Seems to make sense that all rules would be under the same scope root. Changed the prefs/commands to match.
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@4156 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/LanguageDefinition.plist
+++ b/Syntaxes/LanguageDefinition.plist
@@ -250,7 +250,7 @@
 						</dict>
 					</dict>
 					<key>name</key>
-					<string>meta.repository.tm-language-def</string>
+					<string>meta.rule.repository.tm-language-def</string>
 					<key>patterns</key>
 					<array>
 						<dict>
@@ -994,7 +994,7 @@
 						</dict>
 					</dict>
 					<key>name</key>
-					<string>meta.captures.tm-language-def</string>
+					<string>meta.rule.captures.tm-language-def</string>
 					<key>patterns</key>
 					<array>
 						<dict>
