TM Language Grammar:     • Change entity.name.scope.tm-language-def to constant.other.scope.tm-language-def     • Change entity.name.repository.tm-language-def to entity.name.section.repository.tm-language-def     • Change three preference items to match above changes.
Regular Expressions (Oniguruma):
    • Change entity.name.back-reference to entity.name.section.back-reference
    • Change entity.name.group.regexp to entity.name.section.group.regexp

These last two are semi-temporary until we can come up with subset of conventions for regexp.


git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@4426 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/LanguageDefinition.plist
+++ b/Syntaxes/LanguageDefinition.plist
@@ -280,7 +280,7 @@
 										<key>2</key>
 										<dict>
 											<key>name</key>
-											<string>entity.name.repository.tm-language-def</string>
+											<string>entity.name.section.repository.tm-language-def</string>
 										</dict>
 										<key>3</key>
 										<dict>
@@ -1214,7 +1214,7 @@
 					<key>begin</key>
 					<string>'(?=.*')</string>
 					<key>contentName</key>
-					<string>entity.name.scope.tm-language-def</string>
+					<string>constant.other.scope.tm-language-def</string>
 					<key>end</key>
 					<string>'</string>
 					<key>name</key>
@@ -1233,7 +1233,7 @@
 					<key>begin</key>
 					<string>"(?=.*")</string>
 					<key>contentName</key>
-					<string>entity.name.scope.tm-language-def</string>
+					<string>constant.other.scope.tm-language-def</string>
 					<key>end</key>
 					<string>"</string>
 					<key>name</key>
