allow multi-line comments/strings.  not sure why the rule was as it was before
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@4519 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/LanguageDefinition.plist
+++ b/Syntaxes/LanguageDefinition.plist
@@ -567,7 +567,7 @@
 					<key>applyEndPatternLast</key>
 					<integer>1</integer>
 					<key>begin</key>
-					<string>'(?=.*')</string>
+					<string>'</string>
 					<key>contentName</key>
 					<string>comment.block.string.tm-language-def</string>
 					<key>end</key>
@@ -586,7 +586,7 @@
 				</dict>
 				<dict>
 					<key>begin</key>
-					<string>"(?=.*")</string>
+					<string>"</string>
 					<key>contentName</key>
 					<string>comment.block.string.tm-language-def</string>
 					<key>end</key>
@@ -1294,7 +1294,7 @@
 					<key>applyEndPatternLast</key>
 					<integer>1</integer>
 					<key>begin</key>
-					<string>'(?=.*')</string>
+					<string>'</string>
 					<key>end</key>
 					<string>'</string>
 					<key>name</key>
@@ -1311,7 +1311,7 @@
 				</dict>
 				<dict>
 					<key>begin</key>
-					<string>"(?=.*")</string>
+					<string>"</string>
 					<key>end</key>
 					<string>"</string>
 					<key>name</key>
