move the comment snippet into the menu structure
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@4547 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -55,6 +55,7 @@
 					<string>0D8A14ED-0701-4AD8-8A9C-15AD1BA60D8D</string>
 					<string>D5BA7FE7-543F-47FC-BECD-750200B81762</string>
 					<string>------------------------------------</string>
+					<string>1CB08CB5-7CBE-4A5D-A69B-DC04244838C4</string>
 					<string>CC1B8D51-A3E8-4940-B4E8-E0B87D0E4BBA</string>
 					<string>7AA7E17E-80A3-4F64-80B8-37D335B3BAE4</string>
 					<string>D9B7683F-308C-4A42-92FB-6DFC06240A92</string>
